--- a/system/user/templates/default_site/styles.group/footer.css
+++ b/system/user/templates/default_site/styles.group/footer.css
@@ -1,18 +1,14 @@
 /* Glassmorphic Footer Styles */
 .glassmorphic-footer {
-   background:linear-gradient(45deg, rgba(237, 198, 112, 0.6), rgba(237, 198,112, 0.4));
+   background:linear-gradient(45deg, rgba(255, 150, 44, 0.6), rgba(255, 150,44, 0.4));
 backdrop-filter: blur(4px);
 box-shadow: 0 0 20px #000;
     border-radius: 15px;
-    border: 2px solid rgba(93, 68, 0, 0.5);
-    color: #F2F1DC; /* Neutral color */
+    border: 2px solid rgba(144, 77, 0, 0.5);
+    color: var(--color-on-primary); /* Neutral color */
     width:100vw;
     font-family:"Protest Revolution";
    margin-top:5em;
-   
-  
-
-  
 }
 
 
@@ -73,14 +69,14 @@ p{
 
 .footer-section p,
 .footer-section a {
-    color: var(--color-on-primary-container); /* Neutral color */
+    color: var(--color-on-primary); /* Neutral color */
     text-decoration: none;
     
 }
 
 .footer-section a:hover {
-    background-color:rgba(255,0,0,0.5);
-    color:var(--color-primary);
+    background-color:rgba(22,42,81,0.5);
+    color:var(--color-on-secondary-container);
 }
 
 .social-icons, .footer-copyright, .footer-links {
@@ -102,8 +98,8 @@ p{
 .social-icons > a {
     padding: 5px 10px;
     border-radius: 5px;
-    background-color:rgba(255,0,0,0.5);
-    color:var(--color-primary);
+    background-color:rgba(22,42,81,0.5);
+    color:var(--color-on-primary);
     transition: background 0.3s ease;
     
 }
@@ -111,17 +107,17 @@ p{
 .footer-links > a {
 
     border-radius: 5px;
-        background-color:rgba(255,0,0,0.5);
-    color:var(--color-primary);
+        background-color:rgba(255,150,44,0.5);
+    color:var(--color-on-primary);
     transition: background 0.3s ease;
 }
 .social-icons a:hover {
-    background: rgba(73, 156, 166, 0.5); /* Secondary color with transparency */
+    background: rgba(22, 42, 81, 0.5); /* Secondary color with transparency */
 }
 
 .footer-links a:hover{
-    background-color:rgba(255,0,0,0.5);
-    color:var(--color-primary);
+    background-color:rgba(22,42,81,0.5);
+    color:var(--color-on-secondary-container);
 }
 @media (max-width: 768px) {
     .footer-content {
