--- a/system/user/templates/default_site/styles.group/classes.css
+++ b/system/user/templates/default_site/styles.group/classes.css
@@ -3,7 +3,7 @@
 .classes-main {
 	display:grid;
     width:100%;
-    color:var(--color-on-primary);
+    color:var(--color-on-surface);
     min-height:100vh;
     overflow:hidden;
 }
@@ -27,8 +27,8 @@
 .card-title {
   display: block;
   text-align: center;
-  color: var(--color-on-primary);
-  background-color: rgba(255, 150, 44, 0.3);
+  color: var(--color-on-surface);
+  background-color: rgba(58, 38, 0, 0.3);
   backdrop-filter:blur(5px);
   padding: 2%;
   border-top-right-radius: 4px;
