--- a/system/user/templates/default_site/styles.group/nav.css
+++ b/system/user/templates/default_site/styles.group/nav.css
@@ -1,17 +1,18 @@
 nav {
+
 	display:flex;
 	flex-wrap:wrap;
 	justify-content:space-between;
 	align-content:space-between;
 	font-family:"Protest Revolution";
 	font-size: 1.5em;
-	 background:linear-gradient(45deg, rgba(255,150,44, 0.4), rgba(255,150, 44, 0.2));
+	 background:linear-gradient(45deg, rgba(239,173,33, 0.4), rgba(239,173, 33, 0.2));
 backdrop-filter: blur(3px);
 box-shadow: 0 0 20px #000;
     border-radius: 15px;
     border: 2px solid rgba(144, 77, 0, 0.5);
 		/*background: rgba( 255, 255, 0, 0.2);*/
-	color: var(--color-on-primary);
+	color: var(--color-on-surface);
 	margin:50px 0;
 	
 }
@@ -20,7 +21,7 @@ box-shadow: 0 0 20px #000;
 #nav-sub {
 	display:flex;
 	padding: 15px 30px;
-	color:var(--color-on-primary);
+	color:var(--color-on-surface);
 	text-align: center;
 	border-radius: 20px;
 	text-decoration: none;
@@ -46,7 +47,7 @@ font-size:larger;
 padding: 15px 30px;
 justify-self:end;
 align-self:baseline;
-	color: var(--color-on-primary);
+	color: var(--color-on-surface);
 	border-radius: 20px;
 	text-decoration: none;
 	transition: background 0.2s ease-out;
@@ -68,7 +69,7 @@ nav ul {
 	
 nav ul li {
 	display:inline-block;
-	z-index:1;
+	
 	}
 
 nav a {
@@ -81,7 +82,7 @@ nav a {
 }
 
 nav a:hover { 
-	background-color: #000000; 
+	background-color:var(--color-tertiary); 
 }
 
 /* Hide Dropdowns by Default */
@@ -101,10 +102,14 @@ nav ul ul li {
 	width:170px;
 	float:none;
 	display:list-item;
-	position: relative;
-	z-index:5;
-}
+	 background:linear-gradient(45deg, rgba(239,173,33, 0.4), rgba(239,173, 33, 0.2));
+backdrop-filter: blur(3px);
+box-shadow: 0 0 20px #000;
 
+}
+nav ul ul li:first-of-type{
+margin-top:20px;
+}
 /* Second, Third and more Tiers	*/
 nav ul ul ul li {
 	position: relative;
@@ -120,7 +125,7 @@ li > a:only-child:after { content: ''; }
 nav a{
 	
 	padding: 15px 30px;
-	color: var(--color-on-primary);
+	color: var(--color-on-surface);
 	border-radius: 20px;
 	text-decoration: none;
 	transition: background 0.2s ease-out;
@@ -129,6 +134,6 @@ nav a{
 
 nav a:hover, .nav-signin:hover {
 	background:rgba(22,42,81, 0.5);
-	color:var(--color-on-secondary-container);
+	color:var(--color-tertiary-container);
 }
 
