--- a/system/user/templates/default_site/_partials/sign_in.html
+++ b/system/user/templates/default_site/_partials/sign_in.html
@@ -1,4 +1,4 @@
-{exp:member:login_form return="member/login/success"}
+{exp:member:login_form return="home/index"}
 <div popover="auto" class="login-form" id="login">
     <div class="nolimits-login">	
         <h2>Sign In</h2>
@@ -6,7 +6,7 @@
             <input type="text" name="username" id="username" value="{if username}{username}{/if}"/></p><p>
            <label for="password">Password</label><br/>
         <input type="password" name="password" id="password" value="{if password}{password}{/if}"/></p>
-        <button class="login-btn"  type="submit" value="Login"class="login-btn">Sign In</button>
+        <button class="login-btn"  type="submit" value="Login">Sign In</button>
 </div>
 {/exp:member:login_form}
 </div>
