--- a/system/user/templates/default_site/layouts.group/_wrapper.html
+++ b/system/user/templates/default_site/layouts.group/_wrapper.html
@@ -4,7 +4,7 @@
 			<meta charset="UTF-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<title>No Limits Martial Arts and Fitness</title>
-			<link rel="stylesheet" href="{stylesheet="styles/global"}">
+			<link rel="stylesheet" href="{stylesheet="styles/global"}"/>
 			<link rel="stylesheet" href="{stylesheet="styles/nav"}"/>
 			<link rel="stylesheet" href="{stylesheet="styles/footer"}"/>
 			<link rel="stylesheet" href="{stylesheet="styles/homepage"}"/>
@@ -12,15 +12,19 @@
 			<link rel="stylesheet" href="{stylesheet="styles/sign_up"}"/>
 			<link rel="stylesheet" href="{stylesheet="styles/classes"}"/>
 			<link rel="stylesheet" href="{stylesheet="styles/staff_card"}"/>
+			<link rel="stylesheet" href="{stylesheet="styles/locations"}"/>
+			<link rel="stylesheet" href="{stylesheet="styles/news"}"/>	
+			<link rel="stylesheet" href="{stylesheet="styles/sign-in-sign-up"}"/>
+			<script src="{script='scripts/sign-in-sign-up'}"></script>
 			<script src="js/vanilla_tilt.js"></script>
 			<script src="https://kit.fontawesome.com/d662f2adf5.js" crossorigin="anonymous"></script>
 		</head>
 		<body>
-		
+		<div class="main-container">
 			{nav}
-				
+				<div class="breadcrumbs">{exp:structure:breadcrumb here_as_title="yes"}</div>
 				{layout:contents}
-			
+		</div>	
 				{footer}
 		</body>
 		
