--- a/system/user/templates/default_site/styles.group/classes.css
+++ b/system/user/templates/default_site/styles.group/classes.css
@@ -1,17 +1,14 @@
-.classes-main {
-	
-	display:flex;
-    width:100%;
-    flex-wrap:wrap;
-    flex-direction:column;
-    color:var(--color-on-primary);
-    align-items:start;
-    justify-content:center;
-    height:100%;
+@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic);
 
+.classes-main {
+	display:grid;
+    width:100%;
+    color:var(--color-on-surface);
+    min-height:100vh;
+    overflow:hidden;
 }
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
- @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic);
+
+
 .cards {
   width: 100%;
   display: flex;
@@ -30,8 +27,9 @@
 .card-title {
   display: block;
   text-align: center;
-  color: #fff;
-  background-color: #6184a8;
+  color: var(--color-on-surface);
+  background-color: rgba(58, 38, 0, 0.3);
+  backdrop-filter:blur(5px);
   padding: 2%;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
@@ -53,8 +51,9 @@
   top: 0;
   opacity: 0;
   padding: 18px 8%;
-  background-color: white;
-  overflow-y: scroll;
+  background-color: rgba(255, 150, 44, 0.3);
+  backdrop-filter:blur(15px);
+  overflow-y: hidden;
   transition: 0.8s ease;
 }
 
@@ -63,8 +62,63 @@
   height: 100%;
 }
 
+.class-details-main{
+/*background:rgba(50, 48, 45,0.7);*/
+background:rgba(0,0,0,0.2);
+backdrop-filter:blur(10px);
+display:grid;
+grid-template-columns:1fr 1fr 1fr 1fr;
+grid-template-rows:.25fr 1fr 1fr;
+
+height:100%;
+color:var(--color-inverse-on-surface);
+}
+
+.class-details-heading {
+display:flex;
+flex-direction:column;
+flex-wrap:wrap;
+grid-column-start:1;
+grid-column-end:5;
+grid-row-start:1;
+grid-row-end:2;
+width:100%;
+color:var(--color-inverse-on-surface);
+justify-content:center;
+}
+
+.tkd-schedule {
+
+margin:0 auto;
+ul {
+list-style:none;
+li{
+font-size:1.5em;
+}
+}
+}
+body > div.class-details-main > div.tkd-long-description{
+grid-column-start:2;
+grid-column-end:5;
+grid-row-start:2;
+grid-row-end:4;
+padding-left:1em;
+padding-right:1em;
+
+}
+.class-details-image{
+grid-column-start:1;
+grid-column-end:2;
+grid-row-start:2;
+grid-row-end:4;
+height:100%;
+object-fit:cover;
+padding-top:30px;
+
+img{
 
 
 
+}
+}
 
-Resources
