--- a/system/user/templates/default_site/styles.group/sign_up.css
+++ b/system/user/templates/default_site/styles.group/sign_up.css
@@ -1,43 +1,40 @@
 .registration-form {
-width:25vw;
+width:max-content;
 min-height:45vh;
 padding:20px;
-background:linear-gradient(45deg, rgba(237, 198, 112, 0.6), rgba(237, 198,112, 0.4));
-backdrop-filter: blur(4px);
+background:linear-gradient(45deg, rgba(255, 150, 44, 0.6), rgba(255, 150,44, 0.4));
+backdrop-filter: blur(6px);
 box-shadow: 0 0 20px #000;
-border-top: 2px solid rgba(237, 198, 112, 0.25);
-border-left: 2px solid rgba(237, 198, 112, 0.2);
+border-top: 2px solid rgba(144, 77, 0, 0.25);
+border-left: 2px solid rgba(144, 77, 0, 0.2);
 }
 
 .registration-form h4 {
-color: var(--color-on-surface-inverse);
+color: var(--color-on-surface);
 font-weight:bold;
 font-size:25px;
 }
 
 .registration-form p {
-color: var(--color-on-surface-inverse);
-text-align: justify;
+color: var(--color-on-surface);
 font-size: 15px;
-border: 2px solid rgba(237, 198, 112, 0.02);
+border: 2px solid rgba(144, 77, 0, 0.02);
 }
 
 .registration-btn {
 display: inline-block;
-width: 5em;
+width: 6em;
 height:2em;
 font-size: 22px; 
 border-radius:15px;
-border: none;
 margin-right: 10px;
 margin-top:10px;
-color: var(--color-on-surface-inverse);
+color: var(--color-on-surface);
 transition: 0.4s all;
 cursor: pointer;
-background: rgba( 255, 255, 0, 0.2);
+background: rgba( 22, 42, 81, 0.2);
 	box-shadow: 0 4px 30px 0 rgba( 31, 38, 135, 0.425 );
 	backdrop-filter: blur( 3.1px );
 	-webkit-backdrop-filter: blur( 5px );
-	border-radius: 10px;
-	border: 1px solid rgba( 255, 255, 0, 1 );
+	border: 1px solid rgba( 0, 8, 32, 1 );
 }
