--- a/system/user/templates/default_site/about.group/locations.html
+++ b/system/user/templates/default_site/about.group/locations.html
@@ -1,7 +1,7 @@
 {layout="layouts/_wrapper"}
 <div class="locations-main">
 <div class="location-select">
-<label for="locations">Select a Location Below</label>
+<label class="branches" for="locations">Select a Location Below</label><br/>
 <select id="locations" onchange="showContent()" name="locations">
 	<option value="">Select a Location</option>
 	<option value="main">Main</option>
@@ -15,19 +15,19 @@
 <h2>Pricing</h2>
 <table>
 <tr>
-<th>Number of Disciplines</th>
-<th>Per Month</th>
+<th class="c1">Number of Disciplines</th>
+<th class="c2">Per Month</th>
 </tr>
 <tr>
-<td>1</td>
-<td>$150</td>
+<td class="c1">1</td>
+<td class="c2">$150</td>
 </tr>
 <tr>
-<td>2</td>
-<td>$200</td>
+<td class="c1">2</td>
+<td class="c2">$200</td>
 <tr>
-<td>All</td>
-<td>$300</td>
+<td class="c1">No Limits</td>
+<td class="c2">$300</td>
 </table>
 <p>Drop-ins, guests, and visitors welcome at $25 per class.</p>
 </div>
