--- a/system/user/templates/default_site/layouts.group/_wrapper.html
+++ b/system/user/templates/default_site/layouts.group/_wrapper.html
@@ -13,7 +13,10 @@
 			<link rel="stylesheet" href="{stylesheet="styles/classes"}"/>
 			<link rel="stylesheet" href="{stylesheet="styles/staff_card"}"/>
 			<link rel="stylesheet" href="{stylesheet="styles/locations"}"/>
-			<link rel="stylesheet" href="{stylesheet="styles/news"}"/>			<script src="js/vanilla_tilt.js"></script>
+			<link rel="stylesheet" href="{stylesheet="styles/news"}"/>
+			<link rel="stylesheet" href="{stylesheet="styles/sign-in-sign-up"}"/>
+			<link rel="stylesheet" href="{stylesheet="styles/class-details"}"/>
+			<script src="js/vanilla_tilt.js"></script>
 			<script src="https://kit.fontawesome.com/d662f2adf5.js" crossorigin="anonymous"></script>
 		</head>
 		<body>
