--- a/system/user/templates/default_site/styles.group/sign_up.css
+++ b/system/user/templates/default_site/styles.group/sign_up.css
@@ -10,26 +10,26 @@ border-left: 2px solid rgba(144, 77, 0, 0.2);
 }
 
 .registration-form h4 {
-color: var(--color-on-primary);
+color: var(--color-on-surface);
 font-weight:bold;
 font-size:25px;
 }
 
 .registration-form p {
-color: var(--color-on-primary);
+color: var(--color-on-surface);
 font-size: 15px;
 border: 2px solid rgba(144, 77, 0, 0.02);
 }
 
 .registration-btn {
 display: inline-block;
-width: 5em;
+width: 6em;
 height:2em;
 font-size: 22px; 
 border-radius:15px;
 margin-right: 10px;
 margin-top:10px;
-color: var(--color-on-secondary-container);
+color: var(--color-on-surface);
 transition: 0.4s all;
 cursor: pointer;
 background: rgba( 22, 42, 81, 0.2);
