--- a/system/user/templates/default_site/styles.group/classes.css
+++ b/system/user/templates/default_site/styles.group/classes.css
@@ -6,119 +6,15 @@
     color:var(--color-on-surface);
     min-height:100vh;
     overflow:hidden;
+    margin-left:30px;
 }
 
 
-.cards {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.card {
-  margin: 40px;
-  position: relative;
-  max-width: 250px;
-  max-height: 350px;
-  box-shadow: 0 40px 60px -6px black;
-}
-
-.card-title {
-  display: block;
-  text-align: center;
-  color: var(--color-on-surface);
-  background-color: rgba(58, 38, 0, 0.3);
-  backdrop-filter:blur(5px);
-  padding: 2%;
-  border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
-}
-
-.card img {
-  width: 100%;
-  height: 98%;
-  object-fit: cover;
-  display: block;
-  position: relative;
-}
-
-.card-desc {
-  display: block;
-  font-size: 1.2rem;
-  position: absolute;
-  height: 0;
-  top: 0;
-  opacity: 0;
-  padding: 18px 8%;
-  background-color: rgba(255, 150, 44, 0.3);
-  backdrop-filter:blur(15px);
-  overflow-y: hidden;
-  transition: 0.8s ease;
-}
-
-.card:hover .card-desc {
-  opacity: 1;
-  height: 100%;
-}
-
-.class-details-main{
-/*background:rgba(50, 48, 45,0.7);*/
-background:rgba(0,0,0,0.2);
-backdrop-filter:blur(10px);
-display:grid;
-grid-template-columns:1fr 1fr 1fr 1fr;
-grid-template-rows:.25fr 1fr 1fr;
-
-height:100%;
-color:var(--color-inverse-on-surface);
-}
-
-.class-details-heading {
-display:flex;
-flex-direction:column;
-flex-wrap:wrap;
-grid-column-start:1;
-grid-column-end:5;
-grid-row-start:1;
-grid-row-end:2;
-width:100%;
-color:var(--color-inverse-on-surface);
-justify-content:center;
-}
-
-.tkd-schedule {
-
-margin:0 auto;
-ul {
-list-style:none;
-li{
-font-size:1.5em;
-}
-}
-}
-body > div.class-details-main > div.tkd-long-description{
-grid-column-start:2;
-grid-column-end:5;
-grid-row-start:2;
-grid-row-end:4;
-padding-left:1em;
-padding-right:1em;
-
-}
-.class-details-image{
-grid-column-start:1;
-grid-column-end:2;
-grid-row-start:2;
-grid-row-end:4;
-height:100%;
-object-fit:cover;
-padding-top:30px;
-
-img{
 
 
 
-}
-}
+
+
+
+
 
