--- a/system/user/templates/default_site/styles.group/homepage.css
+++ b/system/user/templates/default_site/styles.group/homepage.css
@@ -32,7 +32,7 @@ h1 {
 	padding:0;
 	font-size: 4em;
 	font-weight:bolder;
-	color:var(--color-on-primary);
+	color:var(--color-on-surface);
 }
 }
 
@@ -54,7 +54,7 @@ margin-inline:auto;
 
 .join-button {
 	transition: transform 0.3s ease;
-	background: rgba( 255, 150, 44, 0.5);
+	background:rgba(239,173, 33, 0.5);
 	box-shadow: 0 4px 30px 0 rgba( 31, 38, 135, 0.425 );
 	backdrop-filter: blur( 3.1px );
 	-webkit-backdrop-filter: blur( 5px );
@@ -71,7 +71,7 @@ margin-inline:auto;
 	
 }
 .join-button:hover {
-	background: rgba( 22, 42, 81, 0.4 );
+	background: rgba(255, 222, 170,0.4);
 	box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.7 );
 	backdrop-filter: blur( 4px );
 	transform: scale(1.2);
