--- a/system/user/templates/default_site/styles.group/locations.css
+++ b/system/user/templates/default_site/styles.group/locations.css
@@ -4,25 +4,49 @@
         .active {
             display: block;
             margin-top:20px;
-            color:var(--color-on-primary-container);
-            border: 4px solid var(--color-primary);
+            color:var(--color-on-secondary-container);
+            border: 4px solid var(--color-secondary);
             border-radius:40px;
-            background:var(--color-primary-container);
-            width:100%;
+            background:linear-gradient(120deg, rgba(239, 173,33,0.5), rgba(239, 173,33,0.7));
+            backdrop-filter: blur(6px);
             height:max-content;
             padding:20px;
             
             
         }
-        
+       table{
+           table-layout: fixed;
+           width: 100%;
+           border-collapse:collapse;
+           font-size:1em;
+       }
+
+       th:nth-child(1){
+           width:50%;
+       }
+       th:nth-child(2){
+           width:50%;
+       }
+
+       th,td{
+           padding:20px;
+           font-size:1.5em;
+       }
+       td{
+           text-align:center;
+       }
+
        .location-select{
        margin-top:10px;
        
        
        }
-       
+       .branches{
+           font-size:1.5em;
+       }
        .locations-main{
-       width:100%;
+       margin:0 auto;
        min-height:60vh;
+           max-width:50vw;
        padding-left: 20px;
        }
