--- a/system/user/templates/default_site/styles.group/nav.css
+++ b/system/user/templates/default_site/styles.group/nav.css
@@ -15,6 +15,11 @@ box-shadow: 0 0 20px #000;
 	color: var(--color-on-surface);
 	margin:50px 0;
 	
+	p {
+	text-transform:capitalize;
+	margin-right:15px;
+	}
+	
 }
 
 
@@ -58,6 +63,8 @@ align-self:baseline;
   font-style: inherit;
   font-weight: inherit;
   line-height: inherit;
+  margin-right:15px;
+  text-transform:capitalize;
 }
 nav ul {
 	padding: 0;
@@ -82,7 +89,7 @@ nav a {
 }
 
 nav a:hover { 
-	background-color:var(--color-tertiary); 
+	background-color:var(--color-primary); 
 }
 
 /* Hide Dropdowns by Default */
@@ -110,6 +117,10 @@ box-shadow: 0 0 20px #000;
 nav ul ul li:first-of-type{
 margin-top:20px;
 }
+
+nav ul ul li:last-of-type{
+margin-bottom:20px;
+}
 /* Second, Third and more Tiers	*/
 nav ul ul ul li {
 	position: relative;
@@ -134,6 +145,6 @@ nav a{
 
 nav a:hover, .nav-signin:hover {
 	background:rgba(22,42,81, 0.5);
-	color:var(--color-tertiary-container);
+	color:var(--color-primary-container);
 }
 
