Updates to page structure and styles

--- a/system/user/templates/default_site/home.group/sign-in-sign-up.html
+++ b/system/user/templates/default_site/home.group/sign-in-sign-up.html
@@ -10,7 +10,7 @@
                 <input class="sign-in-up-input" type="text" name="first_name" id="first_name" value="{if first_name}{first_name}{/if}" placeholder="First Name*">
                 <input class="sign-in-up-input" type="text" name="last_name" id="last_name" value="{if last_name}{last_name}{/if}" placeholder="Last Name*">
                 <p>Choose a Username that will be unique (i.e. jdoe8675309)</p>
-                <input class="sign-in-up-input" type="text" name="username" id="username" value="{if username}{username}{/if}" placeholder="User Name*">
+                <input class="sign-in-up-input" type="text" name="username" id="usernamesu" value="{if username}{username}{/if}" placeholder="User Name*">
                 <p>Choose a Display Name that you want other members to see (i.e. John)</p>
                 <input class="sign-in-up-input" type="text" name="screenname" id="screenname" value="{if screenname}{screenname}{/if}" placeholder="Display Name*">
                 <input class="sign-in-up-input" type="email" placeholder="Email*">
@@ -28,7 +28,7 @@
 
 
                 <!-- input fields start -->
-                <input class="sign-in-up-input" type="username" name="username" id="username" value="{if username}{username}{/if}" placeholder="Username">
+                <input class="sign-in-up-input" type="username" name="username" id="usernamesi" value="{if username}{username}{/if}" placeholder="Username">
                 <input class="sign-in-up-input" type="password" name="password" id="password" value="{if password}{password{/if}" placeholder="Password">
                 <span>Forgot your <span class="forgot">password?</span></span>
                 <button class="sign-in-up-button bb">Login</button>
